--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,24 @@
-<p>login works!</p>
+<div class="login-container">
+  <h2>Login</h2>
+  <form>
+    <div class="form-group">
+      <label for="username">Username:</label>
+      <input type="text" id="username" name="username" required>
+    </div>
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" required>
+    </div>
+    <div class="form-group remember-me">
+      <input type="checkbox" id="remember" name="remember">
+      <label for="remember">Remember me</label>
+    </div>
+    <button type="submit">Login</button>
+  </form>
+  <div class="forgot-password">
+    <a href="#">Forgot Password?</a>
+  </div>
+  <div class="signup">
+    <p>Don't have an account? <a href="#">Sign up</a></p>
+  </div>
+</div>
