Added navbar component

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -19,6 +19,6 @@
     <a href="#">Forgot Password?</a>
   </div>
   <div class="signup">
-    <p>Don't have an account? <a href="#">Sign up</a></p>
+    <p>Don't have an account? <a routeLink="/register">Sign up</a></p>
   </div>
 </div>
